--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 boto>=2.38.0
+invoke>=0.10.1
 git+https://github.com/jmcarp/sandman@develop
 git+https://github.com/jmcarp/csvkit@create-primary-key
