Protect admin views with basic auth.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 boto>=2.38.0
 invoke>=0.10.1
+Flask-BasicAuth>=0.2.0
 git+https://github.com/jmcarp/sandman@develop
 git+https://github.com/jmcarp/csvkit@create-primary-key
