Subscribe to S3 bucket notifications.
[Resolves #2]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-boto>=2.38.0
+boto3>=1.1.1
 invoke>=0.10.1
+requests>=2.7.0
 Flask-BasicAuth>=0.2.0
 git+https://github.com/jmcarp/sandman@develop
 git+https://github.com/jmcarp/csvkit@create-primary-key
