--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ gunicorn>=19.3.0
 cryptography>=1.0
 Flask-Cors>=2.1.0
 Flask-BasicAuth>=0.2.0
+marshmallow-sqlalchemy>=0.3.0
 
-git+https://github.com/jmcarp/sandman2@develop
+git+https://github.com/jmcarp/sandman2@dev
+git+https://github.com/marshmallow-code/smore@dev
