Refresh asynchronously; use 18F fork of sandman2

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ marshmallow-sqlalchemy>=0.4.0
 smore==0.2.0
 cfenv==0.5.2
 
-git+https://github.com/jmcarp/sandman2@dev
+git+https://github.com/18f/sandman2@dev
 git+https://github.com/marshmallow-code/smore@dev
