--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 boto3>=1.1.1
 csvkit>=0.9.1
 invoke>=0.10.1
-pandas>=0.16.2
+pandas
+# intentionally leaving pandas version blank, b/c `pip install` generally
+# fails on Linux - must use the package manager version
 psycopg2>=2.6.1
 requests>=2.7.0
 gunicorn>=19.3.0
