--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,5 @@ cfenv==0.5.2
 
 git+https://github.com/18f/sandman2@table-delete
 git+https://github.com/marshmallow-code/smore@dev
+
+python-dotenv==0.5.1
