Add explicit dependencies for pytest and pytest-flask

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ marshmallow==2.0.0.b4
 marshmallow-sqlalchemy==0.4.0
 smore==0.2.0
 cfenv==0.5.2
+pytest
+pytest-flask
+pytest-cov
 
 git+https://github.com/18f/sandman2@table-delete
 git+https://github.com/marshmallow-code/smore@dev
