--- a/manifest.yml
+++ b/manifest.yml
@@ -1,2 +1,2 @@
 stack: cflinuxfs2
-buildpack: "https://github.com/ddollar/heroku-buildpack-multi.git"
+buildpack: "https://bitbucket.org/cf-utilities/cf-buildpack-multi.git"
